--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
           </div>
         </div>
 
-        <button type="submit" id="submit">Submit</button>
+        <button type="submit" id="submit" onclick="validateForm()">
+          Submit
+        </button>
         <span class="error" id="submiterror"></span>
       </form>
     </div>
